--- a/work-projects.html
+++ b/work-projects.html
@@ -101,7 +101,7 @@
 
             <h2 class="text-white mx-3 mb-5 work">Projects</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card mx-3 mb-4">
                         <div class="card-header project-header">
                             <h3 class="text-info">Contact Manager</h3>
@@ -124,7 +124,29 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <div class="card mx-3 mb-4">
+                        <div class="card-header project-header">
+                            <h3 class="text-info">Client Panel</h3>
+                        </div>
+                        <div class="card-body project-body">
+                            <p class="text-white p-text">Web app, built using React, Redux and Firebase/Firestore, to
+                                manage your clients.</p>
+                        </div>
+                        <div class="card-footer project-footer">
+                            <div class="d-flex">
+                                <a href="https://github.com/PravunathSingh/Client-Panel" class="text-primary mb-3">View
+                                    Source Code...</a>
+                            </div>
+                            <div class="d-flex">
+                                <a href="https://clientmanager.netlify.app" class="text-success">View
+                                    Live Project...</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
                     <div class="card mx-3 mb-4">
                         <div class="card-header project-header1">
                             <h3 class="text-success">FoodBae 🍖❤️</h3>
@@ -148,7 +170,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="card mx-3 mb-5">
                         <div class="card-header project-header2">
                             <h3 class="text-danger">BookList App</h3>
